@@ -447,6 +447,7 @@ Example:</p>
 <div><div class="line-block">
 <div class="line"><code class="docutils literal"><span class="pre">regrid(vertical,</span> <span class="pre">altitude</span> <span class="pre">[km],</span> <span class="pre">10,</span> <span class="pre">0.5,</span> <span class="pre">1.0)</span></code></div>
 <div class="line">(indicating a grid of altitudes 0.5, 1.5, ..., 9.5)</div>
+<div class="line"><code class="docutils literal"><span class="pre">regrid(time,</span> <span class="pre">datetime</span> <span class="pre">[hours</span> <span class="pre">since</span> <span class="pre">2017-04-01],</span> <span class="pre">23,</span> <span class="pre">0.5,</span> <span class="pre">1.0)</span></code></div>
 </div>
 </div></blockquote>
 </dd>
